force-app/main/default/objects/GitHub_User__c/GitHub_User__c.object-meta.xml
<CustomObject>
    <label>GitHub User</label>
    <nameField>
        <label>GitHub User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GitHub Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>