force-app/main/default/objects/GitHub_User__c/fields/Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Avatar_URL__c</fullName>
    <label>Avatar URL</label>
    <type>Url</type>
</CustomField>