force-app/main/default/objects/GitHub_User__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>