force-app/main/default/objects/GitHub_User__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>HYPERLINK( Avatar_URL__c  , IMAGE(Avatar_URL__c, &quot;Image&quot;,320,320 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>