force-app/main/default/objects/GitHub_User__c/fields/Is_Get_All_Repositories__c.field-meta.xml
<CustomField>
    <fullName>Is_Get_All_Repositories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get All Repositories?</label>
    <type>Checkbox</type>
</CustomField>