force-app/main/default/objects/GitHub_User__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <label>Login</label>
    <length>50</length>
    <type>Text</type>
</CustomField>