force-app/main/default/objects/GitHub_User__c/fields/Node_Id__c.field-meta.xml
<CustomField>
    <fullName>Node_Id__c</fullName>
    <label>Node Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>