force-app/main/default/objects/GitHub_User__c/fields/Repositories_URL__c.field-meta.xml
<CustomField>
    <fullName>Repositories_URL__c</fullName>
    <label>Repositories URL</label>
    <type>Url</type>
</CustomField>