force-app/main/default/objects/GitHub_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HTML_URL__c</columns>
    <columns>Node_Id__c</columns>
    <columns>Login__c</columns>
    <columns>Repositories_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>